--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,56 @@
+/*geral*/
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  color: #333;
+} 
+h1, h2, h3, h4, h5, h6 {
+  color: #2B2D42;
+  font-weight: 700;
+  margin: 0 0 10px;
+} 
+a {
+  color: #2B2D42;
+  font-weight: 500;
+  transition: 0.2s color;
+  text-decoration: none;
+}
+
+a:hover, a:focus {
+color: #D10024;
+text-decoration: none;
+outline: none;
+}
+ul, ol , li{
+  margin: 0;
+  padding: 0;
+  list-style: none
+}
+
+.input {
+  height: 40px;
+  padding: 0px 15px;
+  border: 1px solid #E4E7ED;
+  background-color: #FFF;
+  width: 100%;
+}
+.section {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+div{
+  display: block;
+}
+ul {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+}
+
 /*cabeçalho - topo*/
 #top-header {
   background-color: #1E1F29;
@@ -21,35 +74,27 @@
 }
 /*cabeçalho*/
 #header {
-    padding-top: 15px;
     padding-bottom: 15px;
     background-color: #15161D;
 }
 /*cabeçalho- logo*/
-.header-logo {
-    float: left;
-}
-  
-.header-logo .logo img {
-    display: block;
+.header-logo img {
+    height: 100px;
+    padding-left: 30px;
 }
 /*cabeçalho- botão do busca*/
 .header-search {
-    padding: 15px 0px;
-}
+    padding-top: 50px;
+    margin-left: 50px;
+  }
   
 .header-search form {
     position: relative;
 }
-  
-.header-search form .input-select {
-    margin-right: -4px;
-    border-radius: 40px 0px 0px 40px;
-}
-  
 .header-search form .input {
-    width: calc(100% - 260px);
-    margin-right: -4px;
+  width: calc(100% - 260px);
+  border-radius: 40px 0px 0px 40px;
+  margin-right: -4px;
 }
   
 .header-search form .search-btn {
@@ -62,66 +107,59 @@
     border-radius: 0px 40px 40px 0px;
 }
 
-/*cabeçalho- carrinho*/
-.header-ctn {
-    float: right;
-    padding: 15px 0px;
-  }
+/*cabeçalho- carrinho e menu toggle*/
+.header-carrinho {
+  padding-top: 40px;
+  display: inline-block;
+  margin-left: 15px;
+}
+
+.box-carrinho-menu a{
+  display: block;
+  position: relative;
+  width: 90px;
+  text-align: center;
+  color: #FFF;
+}
+.box-carrinho-menu a i {
+  display: block;
+  font-size: 18px;
+}
+
+.box-carrinho-menu a span {
+  font-size: 12px;
+}
+
+.header-carrinho a .qtd {
+  position: absolute;
+  right: 15px;
+  top: -10px;
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  text-align: center;
+  border-radius: 50%;
+  font-size: 10px;
+  color: #FFF;
+  background-color: #D10024;
+}
   
-  .header-ctn>div {
-    display: inline-block;
-  }
-  
-  .header-ctn>div+div {
-    margin-left: 15px;
-  }
-  
-  .header-ctn>div>a {
-    display: block;
-    position: relative;
-    width: 90px;
-    text-align: center;
-    color: #FFF;
-  }
-  
-  .header-ctn>div>a>i {
-    display: block;
-    font-size: 18px;
-  }
-  
-  .header-ctn>div>a>span {
-    font-size: 12px;
-  }
-  
-  .header-ctn>div>a>.qty {
-    position: absolute;
-    right: 15px;
-    top: -10px;
-    width: 20px;
-    height: 20px;
-    line-height: 20px;
-    text-align: center;
-    border-radius: 50%;
-    font-size: 10px;
-    color: #FFF;
-    background-color: #D10024;
-  }
-  
-  .header-ctn .menu-toggle {
-    display: none;
-  }
 /*cabeçalho- menu*/
+.box-carrinho-menu .menu-toggle {
+  display: none;
+}
+
 #navigation {
     background: #FFF;
     border-bottom: 2px solid #E4E7ED;
     border-top: 3px solid #D10024;
 }
 
-.main-nav>li+li {
+.main-nav li+li {
   margin-left: 30px
 }
 
-.main-nav>li>a {
+.main-nav li a {
   padding: 20px 0px;
 }
 
@@ -144,64 +182,15 @@
   width: 100%;
 }
 
-.header-ctn li.nav-toggle {
-  display: none;
-}
-
-  
-/*cabeçalho- responsividade-menu*/
-@media only screen and (max-width: 991px) {
-    .header-ctn .menu-toggle {
-      display: inline-block;
-    }
-    #responsive-nav {
-      position: fixed;
-      left: 0;
-      top: 0;
-      background: #15161D;
-      height: 100vh;
-      max-width: 250px;
-      width: 0%;
-      overflow: hidden;
-      z-index: 22;
-      padding-top: 60px;
-      -webkit-transform: translateX(-100%);
-      -ms-transform: translateX(-100%);
-      transform: translateX(-100%);
-      -webkit-transition: 0.2s all;
-      transition: 0.2s all;
-    }
-    #responsive-nav.active {
-      -webkit-transform: translateX(0%);
-      -ms-transform: translateX(0%);
-      transform: translateX(0%);
-      width: 100%;
-    }
-    .main-nav {
-      margin: 0px;
-      float: none;
-    }
-    .main-nav>li {
-      display: block;
-      float: none;
-    }
-    .main-nav>li+li {
-      margin-left: 0px;
-    }
-    .main-nav>li>a {
-      padding: 15px;
-      color: #FFF;
-    }
-  }
   
 /*footer*/
 #footer {
     background: #15161D;
     color: #B9BABC;
-    position: fixed;
     bottom:0;
     left:0;
     width: 100%;
+    border-top: 3px solid #D10024;
 }
 #footer a{
     color: #B9BABC;
@@ -213,65 +202,251 @@
     color: #FFF;
     text-transform: uppercase;
     font-size: 18px;
-    margin: 0px 0px 30px;
+    margin: 0px 0px 30px 30px;
 }
 
 
- 
-/*geral*/
-body {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    color: #333;
-} 
-h1, h2, h3, h4, h5, h6 {
-    color: #2B2D42;
-    font-weight: 700;
-    margin: 0 0 10px;
-} 
-a {
-    color: #2B2D42;
-    font-weight: 500;
-    transition: 0.2s color;
-    text-decoration: none;
+/*=========================================================
+	responsivo
+===========================================================*/
+
+@media only screen and (max-width: 991px) {
+  #top-header .header-links.pull-left {
+    float: none !important;
+  }
+  #top-header .header-links.pull-right {
+    float: none !important;
+    margin-top: 5px;
+  }
+  .header-logo {
+    float: none;
+    text-align: center;
+  }
+  .header-logo .logo {
+    display: inline-block;
+  }
+  #product-imgs {
+    margin-bottom: 60px;
+    margin-top: 15px;
+  }
+
+  /*cabeçalho- botão do busca*/
+  .header-search {
+    margin-left: 200px;
+  }
 }
 
-a:hover, a:focus {
-  color: #D10024;
-  text-decoration: none;
-  outline: none;
+@media only screen and (max-width: 767px) {
+  .section-title .section-nav {
+    float: none;
+    margin-top: 10px;
+  }
+  .section-tab-nav li {
+    margin-top: 10px;
+  }
+  .header-search form .input {
+    width: calc(100% - 260px);
+    border-radius: 40px 0px 0px 40px;
+    margin-right: -4px;
+  }
+  .header-search {
+    margin-left: 0px;
+  }
 }
-ul, ol {
-    margin: 0;
-    padding: 0;
-    list-style: none
+
+@media only screen and (max-width: 480px) {
+  .header-search {
+    margin-left: 0px;
+  }
 }
-.input-select {
-    padding: 0px 15px;
-    background: #FFF;
-    border: 1px solid #E4E7ED;
-    height: 40px;
-}
-.input {
-    height: 40px;
-    padding: 0px 15px;
-    border: 1px solid #E4E7ED;
-    background-color: #FFF;
+
+
+/*----------------------------*\
+	responsivo nav
+\*----------------------------*/
+
+@media only screen and (max-width: 991px) {
+  .box-carrinho-menu .menu-toggle {
+    display: inline-block;
+  }
+  #responsivo-nav {
+    position: fixed;
+    left: 0;
+    top: 0;
+    background: #15161D;
+    height: 100vh;
+    max-width: 250px;
+    width: 0%;
+    overflow: hidden;
+    z-index: 22;
+    padding-top: 60px;
+  }
+  #responsivo-nav.active {
+    -webkit-transform: translateX(0%);
+    -ms-transform: translateX(0%);
+    transform: translateX(0%);
     width: 100%;
-}
-.section {
-    padding-top: 30px;
-    padding-bottom: 30px;
-}
-div{
+  }
+  .main-nav {
+    margin: 0px;
+    float: none;
+  }
+  .main-nav li {
     display: block;
+    float: none;
+  }
+  .main-nav li li {
+    margin-left: 0px;
+  }
+  .main-nav li a {
+    padding: 15px;
+    color: #FFF;
+  }
+
 }
-ul {
-    display: block;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
+
+/*responsivo carousel*/
+@media screen and (min-width: 980px){
+  #caroussel { width: 980px; }    
 }
+
+
+/*carrossel*/
+#carrossel img{
+  height: 300px;
+  max-width: 100%;
+  
+}
+#carrossel{
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  box-shadow: 0px 2px 3px 0px #00000011, 0px 2px 5px 0px #00000011;
+  
+}
+
+/*Altera cor dos indicadores do carrossel*/
+.carousel .carousel-indicators li {  background-color: #15161D; }
+.carousel .carousel-indicators li.active { background-color: black; }
+
+
+/*vitrine-produtos*/
+
+.shop {
+  position: relative;
+  overflow: hidden;
+  margin: 15px 0px;
+}
+
+.shop:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0px;
+  width: 60%;
+  background: #D10024;
+  opacity: 0.9;
+  -webkit-transform: skewX(-45deg);
+  -ms-transform: skewX(-45deg);
+  transform: skewX(-45deg);
+}
+
+.shop:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 1px;
+  width: 100%;
+  background: #D10024;
+  opacity: 0.9;
+  -webkit-transform: skewX(-45deg) translateX(-100%);
+  -ms-transform: skewX(-45deg) translateX(-100%);
+  transform: skewX(-45deg) translateX(-100%);
+}
+
+.shop .shop-img {
+  position: relative;
+  background-color: #E4E7ED;
+  z-index: -1;
+}
+
+.shop .shop-img>img {
+  width: 100%;
+  -webkit-transition: 0.2s all;
+  transition: 0.2s all;
+}
+
+.shop:hover .shop-img>img {
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.shop .shop-body {
+  position: absolute;
+  top: 0;
+  width: 75%;
+  padding: 30px;
+  z-index: 10;
+}
+
+.shop .shop-body h3 {
+  color: #FFF;
+}
+
+.shop .shop-body .cta-btn {
+  color: #FFF;
+  text-transform: uppercase;
+}
+
+
+.container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+
+/*---------------------------------*\
+	Busca - produtos - cards - imagens
+\*---------------------------------*/
+
+#product-imgs .product-preview{
+  margin: 0px 5px;
+  border: 1px solid #E4E7ED;
+}
+
+
+
+.thumbnail{
+  border: none;
+  cursor: pointer;
+}
+
+.caption{
+  text-align: center;
+}
+
+.caption .product-name{
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+.caption .product-name a {
+  font-weight: 700;
+}
+
+.product-details .product-name {
+  text-transform: uppercase;
+  font-size: 18px;
+}
+
+
+.thumbnail:hover{
+  box-shadow: 0 0 13px  gray;
+  transition: 1.4s;
+}
+
